Fix names not matching

--- a/Customizable MWSE Multi Mark and Harder Recall/Customizable MWSE Multi Mark and Harder Recall-metadata.toml
+++ b/Customizable MWSE Multi Mark and Harder Recall/Customizable MWSE Multi Mark and Harder Recall-metadata.toml
@@ -1,5 +1,5 @@
 [package]
-name = "Customizable MWSE Multi Mark & Harder Recall"
+name = "Customizable MWSE Multi Mark and Harder Recall"
 description = "An overhaul of the mark and recall system"
 homepage = "https://www.nexusmods.com/morrowind/mods/47065"
 repository = "https://github.com/Virnetch/tes3-mods"
